Enonic App Skeleton (#1)

--- a/build.gradle
+++ b/build.gradle
@@ -10,8 +10,8 @@ xp {
 app {
     name = project.ext.appName
     displayName = project.ext.displayName
-    vendorName = 'Enonic AS'
-    vendorUrl = 'http://enonic.com'
+    vendorName = 'RCD Systems'
+    vendorUrl = 'http://rcd.systems'
 }
 
 dependencies {
@@ -19,15 +19,6 @@ dependencies {
     compile "com.enonic.xp:portal-api:${xpVersion}"
     include "com.enonic.xp:lib-content:${xpVersion}"
     include "com.enonic.xp:lib-portal:${xpVersion}"
-    include "com.enonic.xp:lib-thymeleaf:${xpVersion}"
-    //include "com.enonic.xp:lib-mustache:${xpVersion}"
-    //include "com.enonic.xp:lib-i18n:${xpVersion}"
-    //include "com.enonic.xp:lib-auth:${xpVersion}"
-    //include "com.enonic.xp:lib-context:${xpVersion}"
-    //include "com.enonic.xp:lib-io:${xpVersion}"
-    //include "com.enonic.xp:lib-mail:${xpVersion}"
-    //include "com.enonic.xp:lib-repo:${xpVersion}"
-    //include "com.enonic.xp:lib-websocket:${xpVersion}"
 }
 
 repositories {
