--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 #
 # Project settings
 #
-group = systems.rcd.enonic
-projectName = foosportal
-appName = systems.rcd.enonic.foosportal
-displayName = Foosportal
-xpVersion = 6.11.0
-version = 1.0.0-SNAPSHOT
+group=systems.rcd.enonic
+projectName=foosportal
+appName=systems.rcd.enonic.foosportal
+displayName=Foos Portal
+xpVersion=6.12.2
+version=1.0.0-SNAPSHOT
